## Makefile.am -- Main Makefile for WHIZARD
##
## Process this file with automake to produce Makefile.in
#
# Copyright (C) 1999-2022 by 
#     Wolfgang Kilian <kilian@physik.uni-siegen.de>
#     Thorsten Ohl <ohl@physik.uni-wuerzburg.de>
#     Juergen Reuter <juergen.reuter@desy.de>
#     with contributions from
#     cf. main AUTHORS file
#
# WHIZARD is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by 
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# WHIZARD is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the 
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
########################################################################

## Use the m4 directory for local Autoconf macros
ACLOCAL_AMFLAGS = -I m4

## Subdirectories to configure
SUBDIRS = circe1 circe2 omega vamp mcfio stdhep tauola pythia6 src python share tests scripts

## Install libtool
libtoolexeclibdir = $(pkglibdir)
nodist_libtoolexeclib_SCRIPTS = libtool

## Extra files in the distribution
dist_noinst_DATA = BUGS test-driver

## Use the same compiler and compiler flags for distcheck
DISTCHECK_CONFIGURE_FLAGS = F77=$(F77) F77FLAGS="$(F77FLAGS)" FC=$(FC) \
	FCFLAGS="$(FCFLAGS)" LIBS="$(LIBS)" --enable-distribution \
	CC=$(CC) CXX=$(CXX) CXXFLAGS="$(CXXFLAGS)"

########################################################################

if FC_IS_NAG
EXTRA_DISTCHECK_CONFIGURE_FLAGS = \
    "--disable-noweb-force" \
    "--disable-noweb-force --disable-ocaml" \
    "--disable-noweb-force --disable-static" \
    "--disable-pythia6" \
    "--enable-fc-debug"
else 
if FC_IS_GFORTRAN
EXTRA_DISTCHECK_CONFIGURE_FLAGS = \
    "--disable-noweb-force" \
    "--disable-noweb-force --disable-ocaml" \
    "--disable-noweb-force --disable-static" \
    "--disable-pythia6" \
    "--enable-fc-debug" \
    "--with-precision=extended" \
    "--with-precision=quadruple --enable-fc-openmp"
else
EXTRA_DISTCHECK_CONFIGURE_FLAGS = \
    "--disable-noweb-force" \
    "--disable-noweb-force --disable-ocaml" \
    "--disable-noweb-force --disable-static" \
    "--disable-pythia6" \
    "--enable-fc-debug" \
    "--with-precision=quadruple --enable-fc-openmp"
endif
endif

extra-distcheck:
	@echo "================================================="  >$@.log
	@echo "make distcheck with additional configure options:" >>$@.log
	for flag in $(EXTRA_DISTCHECK_CONFIGURE_FLAGS); do \
	  if $(MAKE) $(AM_MAKEFLAGS) \
	        DISTCHECK_CONFIGURE_FLAGS='$(DISTCHECK_CONFIGURE_FLAGS) '"$$flag" \
	        distcheck; then \
	    echo "PASS $$flag" >>$@.log; \
	  else \
	    echo "FAIL $$flag" >>$@.log; \
	    exit 1; \
	  fi; \
	done
	@echo "=================================================" >>$@.log
	@cat $@.log
	@rm -f $@.log

########################################################################


## This is generated by configure
DISTCLEANFILES = config-summary.log

## Generate O'Mega caches:
install-all-caches:
	cd omega && $(MAKE) $(AM_MAKEFLAGS) install-all-caches

install-data-hook:
	@echo ''
	@echo '*******************************************************************'
	@echo '* +-------------------------------------------------------------+ *'
	@echo '* | CAUTION:                                                    | *'
	@echo '* |                                                             | *'
	@echo '* | If you have not already run "make check", then we strongly  | *'
	@echo '* | recommend you do so.                                        | *'
	@echo '* |                                                             | *'
	@echo '* | WHIZARD has been carefully tested by its authors, but       | *'
	@echo '* | compilers are all too often released with serious bugs.     | *'
	@echo '* | WHIZARD tends to explore interesting corners in compilers   | *'
	@echo '* | and has hit bugs on quite a few occasions.                  | *'
	@echo '* |                                                             | *'
	@echo '* +-------------------------------------------------------------+ *'
	@echo '*******************************************************************'
	@echo ''

## Extra target for extended tests
## (Would use AM_EXTRA_RECURSIVE_TARGETS, but this requires automake >= 1.13)
check-extended:
	$(MAKE) -C tests check-extended

## Remove backup files
maintainer-clean-local:
	-rm -f *~
